chore: change license

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "pnpm": ">=8"
   },
   "main": "lib/index.js",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "version": "0.0.0",
   "types": "lib/index.d.ts",
   "private": true,
