--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /.changeset/config.json linguist-generated
 /.eslintrc.json linguist-generated
 /.gitattributes linguist-generated
+/.github/FUNDING.yml linguist-generated
 /.gitignore linguist-generated
 /.npmignore linguist-generated
 /.npmrc linguist-generated
