--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws/pdk": "^0",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
+    "@types/jest": "^29.5.5",
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
@@ -75,6 +76,7 @@
   "private": true,
   "workspaces": {
     "packages": [
+      "packages/client-s3",
       "packages/powertools-logger"
     ]
   },
