fix: breaking change occured in powertools logger version 1.9.0

--- a/packages/powertools-logger/.gitignore
+++ b/packages/powertools-logger/.gitignore
@@ -30,6 +30,8 @@ jspm_packages/
 .yarn-integrity
 .cache
 !/.projenrc.js
+!/jest.config.json
+/coverage/
 !/.prettierignore
 !/.prettierrc.json
 !/.npmrc
