--- a/packages/powertools-logger/.gitattributes
+++ b/packages/powertools-logger/.gitattributes
@@ -12,6 +12,7 @@
 /.projen/deps.json linguist-generated
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
+/jest.config.json linguist-generated
 /LICENSE linguist-generated
 /package.json linguist-generated
 /pnpm-lock.yaml linguist-generated
