--- a/packages/powertools-logger/package.json
+++ b/packages/powertools-logger/package.json
@@ -9,6 +9,7 @@
     "post-compile": "npx projen post-compile",
     "pre-compile": "npx projen pre-compile",
     "test": "npx projen test",
+    "test:watch": "npx projen test:watch",
     "watch": "npx projen watch"
   },
   "author": {
@@ -20,6 +21,7 @@
     "@effect/data": "0.18.4",
     "@effect/io": "0.40.0",
     "@types/aws-lambda": "^8.10.121",
+    "@types/jest": "^29.5.5",
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
@@ -29,8 +31,10 @@
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "projen": "^0.73.24",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
@@ -38,7 +42,7 @@
     "@effect/io": "^0.40.0"
   },
   "dependencies": {
-    "@aws-lambda-powertools/logger": "^1"
+    "@aws-lambda-powertools/logger": "^1.9.0"
   },
   "pnpm": {},
   "main": "lib/index.js",
