--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "workspaces": {
     "packages": [
       "packages/client-s3",
+      "packages/client-sns",
       "packages/powertools-logger"
     ]
   },
