feat: implement effectful sqs client

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "packages": [
       "packages/client-s3",
       "packages/client-sns",
+      "packages/client-sqs",
       "packages/powertools-logger"
     ]
   },
