--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "eslint": "^8",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "npm-check-updates": "^16.14.4",
     "nx": "16.0.0",
     "prettier": "^3.0.3",
-    "projen": "^0.73.25",
+    "projen": "^0.73.33",
     "syncpack": "^11.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -54,8 +54,8 @@
     "nx": "^16"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.96.2",
-    "cdk-nag": "^2.27.135",
+    "aws-cdk-lib": "^2.98.0",
+    "cdk-nag": "^2.27.143",
     "constructs": "^10.2.70"
   },
   "pnpm": {
@@ -76,6 +76,9 @@
   "private": true,
   "workspaces": {
     "packages": [
+      "packages/client-dynamodb",
+      "packages/client-eventbridge",
+      "packages/client-lambda",
       "packages/client-s3",
       "packages/client-sns",
       "packages/client-sqs",
