--- a/packages/powertools-logger/package.json
+++ b/packages/powertools-logger/package.json
@@ -18,13 +18,12 @@
     "organization": false
   },
   "devDependencies": {
-    "@effect/data": "0.18.4",
-    "@effect/io": "0.40.0",
     "@types/aws-lambda": "^8.10.122",
     "@types/jest": "^29.5.5",
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
+    "effect": "2.0.0-next.47",
     "eslint": "^8",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-node": "^0.3.9",
@@ -38,8 +37,7 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "@effect/data": "^0.18.4",
-    "@effect/io": "^0.40.0"
+    "effect": "^2.0.0-next.47"
   },
   "dependencies": {
     "@aws-lambda-powertools/logger": "^1.9.0"
