feat: implement effectful step functions client

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
       "packages/client-eventbridge",
       "packages/client-lambda",
       "packages/client-s3",
+      "packages/client-sfn",
       "packages/client-sns",
       "packages/client-sqs",
       "packages/powertools-logger"
