--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ packages:
   - packages/client-eventbridge
   - packages/client-lambda
   - packages/client-s3
+  - packages/client-sfn
   - packages/client-sns
   - packages/client-sqs
   - packages/powertools-logger
