--- a/packages/client-s3/package.json
+++ b/packages/client-s3/package.json
@@ -24,7 +24,7 @@
     "@typescript-eslint/parser": "^6",
     "aws-sdk-client-mock": "^3.0.0",
     "aws-sdk-client-mock-jest": "^3.0.0",
-    "effect": "2.0.0-next.60",
+    "effect": "2.0.0",
     "eslint": "^8",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-node": "^0.3.9",
@@ -38,7 +38,7 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "effect": "^2.0.0-next.60"
+    "effect": "^2"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3",
