feat: implement effect handler with global runtime

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
       "packages/client-sfn",
       "packages/client-sns",
       "packages/client-sqs",
+      "packages/lambda",
       "packages/powertools-logger"
     ]
   },
