--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,4 +9,5 @@ packages:
   - packages/client-sfn
   - packages/client-sns
   - packages/client-sqs
+  - packages/lambda
   - packages/powertools-logger
