feat: add IAM client

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
       "packages/client-api-gateway-management-api",
       "packages/client-dynamodb",
       "packages/client-eventbridge",
+      "packages/client-iam",
       "packages/client-lambda",
       "packages/client-s3",
       "packages/client-sfn",
