ci: update pnpm version

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -11,6 +11,10 @@ runs:
   steps:
     - name: Install pnpm
       uses: pnpm/action-setup@v2
+      id: pnpm-install
+      with:
+        version: 8
+        run_install: false
     - name: Install node
       uses: actions/setup-node@v3
       with:
