feat: add lib-dynamodb

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
       "packages/client-sns",
       "packages/client-sqs",
       "packages/lambda",
+      "packages/lib-dynamodb",
       "packages/powertools-logger"
     ]
   },
