--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -39,7 +39,7 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "effect": "^2.0.1"
+    "effect": ">=2.0.1 <2.3.0"
   },
   "main": "lib/index.js",
   "license": "MIT",
