--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier": "^3.0.3",
     "projen": "^0.79.6",
     "ts-node": "^10.9.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.2.2",
     "vitest": "^1.2.2"
   },
