feat: add client-elasticache

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@
 packages:
   - packages/client-api-gateway-management-api
   - packages/client-dynamodb
+  - packages/client-elasticache
   - packages/client-eventbridge
   - packages/client-iam
   - packages/client-lambda
