--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
       "packages/client-eventbridge",
       "packages/client-iam",
       "packages/client-lambda",
+      "packages/client-rds",
       "packages/client-s3",
       "packages/client-sfn",
       "packages/client-sns",
