--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,18 +2,4 @@
 
 packages:
   - generated/packages/**
-  - packages/s3-request-presigner
-  - packages/client-api-gateway-management-api
-  - packages/client-dynamodb
-  - packages/client-ec2
-  - packages/client-elasticache
-  - packages/client-eventbridge
-  - packages/client-iam
-  - packages/client-lambda
-  - packages/client-s3
-  - packages/client-sfn
-  - packages/client-sns
-  - packages/client-sqs
-  - packages/lambda
-  - packages/lib-dynamodb
-  - packages/powertools-logger
+  - packages/**
