--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "url": "github:floydspace/effect-aws"
   },
   "scripts": {
-    "postinstall": "tsx ./scripts/codegen-clients.ts",
     "build": "pnpm exec projen build",
     "bump": "pnpm exec projen bump",
     "compile": "pnpm exec projen compile",
@@ -57,6 +56,7 @@
     "nx": "^16"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito-identitypool-alpha": "latest",
     "aws-cdk-lib": "^2.126.0",
     "cdk-nag": "^2.28.27",
     "effect": "^2.3.1",
