--- a/packages/s3-request-presigner/package.json
+++ b/packages/s3-request-presigner/package.json
@@ -19,6 +19,8 @@
     "organization": false
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "3.537.0",
+    "@aws-sdk/s3-request-presigner": "3.537.0",
     "@types/aws-lambda": "^8.10.125",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
@@ -35,6 +37,8 @@
     "typescript": "^5.4.2"
   },
   "peerDependencies": {
+    "@aws-sdk/client-s3": "^3.537.0",
+    "@aws-sdk/s3-request-presigner": "^3.537.0",
     "effect": ">=2.3.1 <2.5.0"
   },
   "main": "lib/index.js",
