--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -96,6 +96,10 @@
       "steps": [
         {
           "exec": "pnpm i --frozen-lockfile"
+        },
+        {
+          "exec": "pnpm exec nx run-many --target=install:ci --output-style=stream --nx-bail",
+          "receiveArgs": true
         }
       ]
     },
