--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@aws/pdk": "^0",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@effect/docgen": "^0.4.2",
+    "@effect/docgen": "0.4.3",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
