--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "nx": "16.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.5",
     "projen": "^0.79.24",
     "ts-node": "^10.9.1",
     "tsx": "^4.7.0",
@@ -89,6 +89,7 @@
       "packages/client-iam",
       "packages/client-lambda",
       "packages/client-s3",
+      "packages/client-secrets-manager",
       "packages/client-sfn",
       "packages/client-sns",
       "packages/client-sqs",
