--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@aws/pdk": "^0",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@effect/docgen": "0.4.3",
+    "@effect/docgen": "^0.4.3",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
@@ -48,9 +48,9 @@
     "prettier": "^3.2.5",
     "projen": "^0.79.24",
     "ts-node": "^10.9.1",
-    "tsx": "^4.7.0",
+    "tsx": "~4.16.5",
     "typescript": "^5.4.2",
-    "vitest": "^1.2.2"
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
     "nx": "^16"
