--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "watch": "pnpm exec projen watch",
     "install:ci": "pnpm exec projen install:ci",
     "synth-workspace": "pnpm exec projen",
+    "preinstall": "npx only-allow pnpm",
     "changeset": "changeset",
     "codegen-client": "tsx ./scripts/codegen-client.ts"
   },
@@ -36,29 +37,30 @@
     "@changesets/cli": "^2.26.2",
     "@effect/docgen": "^0.4.3",
     "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
+    "@typescript-eslint/eslint-plugin": "^7",
+    "@typescript-eslint/parser": "^7",
     "constructs": "^10.0.0",
     "eslint": "^8",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "nx": "16.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "nx": "19.0.0",
+    "only-allow": "^1.2.1",
     "prettier": "^3.2.5",
-    "projen": "^0.79.24",
+    "projen": "^0.82.8",
     "ts-node": "^10.9.1",
     "tsx": "~4.16.5",
     "typescript": "^5.4.2",
     "vitest": "^2.0.5"
   },
   "peerDependencies": {
-    "nx": "^16"
+    "nx": "^19"
   },
   "dependencies": {
-    "@aws-cdk/aws-cognito-identitypool-alpha": "latest",
-    "aws-cdk-lib": "^2.126.0",
-    "cdk-nag": "^2.28.27",
+    "@aws-cdk/aws-cognito-identitypool-alpha": "2.147.1-alpha.0",
+    "aws-cdk-lib": "2.147.1",
+    "cdk-nag": "2.28.150",
     "effect": "^3.0.0",
     "enquirer": "^2.4.1"
   },
@@ -71,7 +73,7 @@
   },
   "engines": {
     "node": ">=16",
-    "pnpm": ">=8"
+    "pnpm": ">=8 <9"
   },
   "main": "lib/index.js",
   "license": "MIT",
