--- a/packages/powertools-logger/package.json
+++ b/packages/powertools-logger/package.json
@@ -19,7 +19,7 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.125",
+    "@aws-lambda-powertools/logger": "1.9.0",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
@@ -33,10 +33,8 @@
     "typescript": "^5.4.2"
   },
   "peerDependencies": {
+    "@aws-lambda-powertools/logger": ">=1.9.0",
     "effect": ">=3.0.0 <4.0.0"
-  },
-  "dependencies": {
-    "@aws-lambda-powertools/logger": "^1.9.0"
   },
   "main": "lib/index.js",
   "license": "MIT",
