--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "workspaces": {
     "packages": [
       "packages/client-api-gateway-management-api",
+      "packages/client-codedeploy",
       "packages/client-dynamodb",
       "packages/client-ec2",
       "packages/client-elasticache",
