--- a/packages/client-lambda/package.json
+++ b/packages/client-lambda/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
     "effect": ">=3.0.0 <4.0.0"
