--- a/packages/lib-dynamodb/package.json
+++ b/packages/lib-dynamodb/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
     "@effect-aws/client-dynamodb": "^1.0.0",
