feat: implement effectful step ssm client

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
       "packages/client-sfn",
       "packages/client-sns",
       "packages/client-sqs",
+      "packages/client-ssm",
       "packages/lambda",
       "packages/lib-dynamodb",
       "packages/powertools-logger",
