--- a/packages/client-eventbridge/package.json
+++ b/packages/client-eventbridge/package.json
@@ -38,8 +38,7 @@
     "effect": ">=3.0.0 <4.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-eventbridge": "^3",
-    "@aws-sdk/types": "^3"
+    "@aws-sdk/client-eventbridge": "^3"
   },
   "main": "lib/index.js",
   "license": "MIT",
