--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 /.eslintrc.json linguist-generated
 /.gitattributes linguist-generated
 /.github/FUNDING.yml linguist-generated
+/.github/workflows/release.yml linguist-generated
 /.gitignore linguist-generated
 /.npmignore linguist-generated
 /.npmrc linguist-generated
