--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ jspm_packages/
 !/.nxignore
 !/.github/FUNDING.yml
 !/.changeset/config.json
+!/.github/workflows/release.yml
 !/vitest.shared.ts
 !/vitest.workspace.json
 .direnv/
