--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "pnpm exec projen build",
     "bump": "pnpm exec projen bump",
+    "changeset": "pnpm exec projen changeset",
     "compile": "pnpm exec projen compile",
     "default": "pnpm exec projen default",
     "docgen": "pnpm exec projen docgen",
@@ -17,13 +18,13 @@
     "package": "pnpm exec projen package",
     "post-compile": "pnpm exec projen post-compile",
     "pre-compile": "pnpm exec projen pre-compile",
+    "release": "pnpm exec projen release",
     "run-many": "pnpm exec projen run-many",
     "test": "pnpm exec projen test",
     "watch": "pnpm exec projen watch",
     "install:ci": "pnpm exec projen install:ci",
     "synth-workspace": "pnpm exec projen",
     "preinstall": "npx only-allow pnpm",
-    "changeset": "changeset",
     "codegen-client": "tsx ./scripts/codegen-client.ts"
   },
   "author": {
@@ -36,6 +37,7 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@effect/docgen": "^0.4.3",
+    "@floydspace/projen-components": "1.0.0-next.5",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
