feat: client-scheduler

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
       "packages/client-iam",
       "packages/client-lambda",
       "packages/client-s3",
+      "packages/client-scheduler",
       "packages/client-secrets-manager",
       "packages/client-sfn",
       "packages/client-sns",
