--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,6 +10,7 @@ packages:
   - packages/client-iam
   - packages/client-lambda
   - packages/client-s3
+  - packages/client-scheduler
   - packages/client-secrets-manager
   - packages/client-sfn
   - packages/client-sns
