--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,7 @@ packages:
   - packages/client-elasticache
   - packages/client-eventbridge
   - packages/client-iam
+  - packages/client-kinesis
   - packages/client-lambda
   - packages/client-s3
   - packages/client-scheduler
