--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "nx": "^19"
   },
   "dependencies": {
-    "@aws-cdk/aws-cognito-identitypool-alpha": "2.147.1-alpha.0",
-    "aws-cdk-lib": "2.147.1",
-    "cdk-nag": "2.28.150",
+    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.163.1-alpha.0",
+    "aws-cdk-lib": "^2.163.1",
+    "cdk-nag": "2.31.0",
     "effect": "^3.0.0",
     "enquirer": "^2.4.1"
   },
