--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,6 +19,8 @@ packages:
   - packages/client-kms
   - packages/client-lambda
   - packages/client-mq
+  - packages/client-opensearch
+  - packages/client-opensearchserverless
   - packages/client-rds
   - packages/client-s3
   - packages/client-scheduler
