feat: opensearch & opensearchserverless clients (#73)
* feat: opensearch & opensearchserverless clients

* fix: normalize opensearch-serverless service name

* chore: upgrade lockfile

* refactor: better order of functions

---------

Co-authored-by: Victor Korzunin <5180700+floydspace@users.noreply.github.com>

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,6 +19,8 @@ packages:
   - packages/client-kms
   - packages/client-lambda
   - packages/client-mq
+  - packages/client-opensearch
+  - packages/client-opensearch-serverless
   - packages/client-rds
   - packages/client-s3
   - packages/client-scheduler
