--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
       "packages/client-kms",
       "packages/client-lambda",
       "packages/client-mq",
+      "packages/client-opensearch",
+      "packages/client-opensearch-serverless",
       "packages/client-rds",
       "packages/client-s3",
       "packages/client-scheduler",
