--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "packages": [
       "packages/client-account",
       "packages/client-api-gateway-management-api",
+      "packages/client-bedrock",
       "packages/client-cloudsearch",
       "packages/client-cloudtrail",
       "packages/client-cloudwatch",
@@ -116,6 +117,7 @@
       "packages/client-sqs",
       "packages/client-ssm",
       "packages/client-sts",
+      "packages/client-textract",
       "packages/lambda",
       "packages/lib-dynamodb",
       "packages/powertools-logger",
