--- a/packages/lib-dynamodb/package.json
+++ b/packages/lib-dynamodb/package.json
@@ -19,7 +19,7 @@
     "organization": false
   },
   "devDependencies": {
-    "@effect-aws/client-dynamodb": "1.4.1",
+    "@effect-aws/client-dynamodb": "workspace:^",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
