--- a/packages/ssm/package.json
+++ b/packages/ssm/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-ssm": "^3",
-    "@effect-aws/client-ssm": "1.1.1",
+    "@effect-aws/client-ssm": "workspace:^",
     "@fluffy-spoon/substitute": "^1.208.0",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
