--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
       "packages/client-cognito-identity-provider",
       "packages/client-dynamodb",
       "packages/client-ec2",
+      "packages/client-ecs",
       "packages/client-elasticache",
       "packages/client-eventbridge",
       "packages/client-iam",
