--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,6 +13,7 @@ packages:
   - packages/client-cognito-identity-provider
   - packages/client-dynamodb
   - packages/client-ec2
+  - packages/client-ecs
   - packages/client-elasticache
   - packages/client-eventbridge
   - packages/client-iam
