--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -23,6 +23,7 @@ packages:
   - packages/client-mq
   - packages/client-opensearch
   - packages/client-opensearch-serverless
+  - packages/client-organizations
   - packages/client-rds
   - packages/client-s3
   - packages/client-scheduler
