--- a/packages/client-ecr/package.json
+++ b/packages/client-ecr/package.json
@@ -22,17 +22,17 @@
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
-    "aws-sdk-client-mock": "*",
-    "aws-sdk-client-mock-vitest": "*",
+    "aws-sdk-client-mock": "^4.0.2",
+    "aws-sdk-client-mock-vitest": "^4.0.0",
     "effect": "3.0.0",
     "eslint": "^8",
-    "eslint-config-prettier": "*",
-    "eslint-import-resolver-typescript": "*",
-    "eslint-plugin-import": "*",
-    "eslint-plugin-prettier": "*",
-    "prettier": "*",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.2",
-    "vitest": "*"
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
     "effect": ">=3.0.0 <4.0.0"
