feat: add ses client

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
       "packages/client-s3",
       "packages/client-scheduler",
       "packages/client-secrets-manager",
+      "packages/client-ses",
       "packages/client-sfn",
       "packages/client-sns",
       "packages/client-sqs",
