--- a/packages/client-textract/tsconfig.json
+++ b/packages/client-textract/tsconfig.json
@@ -4,7 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "tsconfig.esm.json"
+      "path": "tsconfig.src.json"
     },
     {
       "path": "tsconfig.dev.json"
