test: fix vitesting

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -157,7 +157,7 @@
       "description": "Run tests for all affected projects",
       "steps": [
         {
-          "exec": "vitest --globals",
+          "exec": "vitest",
           "receiveArgs": true
         }
       ]
