--- a/packages/secrets-manager/package.json
+++ b/packages/secrets-manager/package.json
@@ -33,7 +33,7 @@
     "typescript": "^5.4.2"
   },
   "peerDependencies": {
-    "@effect-aws/client-secrets-manager": "^1.1.0",
+    "@effect-aws/client-secrets-manager": "workspace:^",
     "effect": ">=3.0.4 <4.0.0"
   },
   "main": "build/cjs/index.js",
