--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,6 +7,12 @@
     }
   ],
   "commit": false,
+  "linked": [
+    [
+      "@effect-aws/client-*",
+      "@effect-aws/lib-*"
+    ]
+  ],
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
