docs: generate readme

--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,7 @@
 /package.json linguist-generated
 /pnpm-lock.yaml linguist-generated
 /pnpm-workspace.yaml linguist-generated
+/README.md linguist-generated
 /tsconfig.base.json linguist-generated
 /tsconfig.build.json linguist-generated
 /tsconfig.json linguist-generated
