--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
   - packages/client-api-gateway-management-api
   - packages/client-auto-scaling
   - packages/client-bedrock
+  - packages/client-bedrock-runtime
   - packages/client-cloudsearch
   - packages/client-cloudtrail
   - packages/client-cloudwatch
