feat: add AWS Signature v4 for HttpClientRequest

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -49,4 +49,5 @@ packages:
   - packages/lib-dynamodb
   - packages/powertools-logger
   - packages/secrets-manager
+  - packages/signature-v4
   - packages/ssm
