--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -148,6 +148,9 @@
       "path": "packages/secrets-manager/tsconfig.esm.json"
     },
     {
+      "path": "packages/signature-v4/tsconfig.esm.json"
+    },
+    {
       "path": "packages/ssm/tsconfig.esm.json"
     }
   ]
