--- a/tsconfig.json
+++ b/tsconfig.json
@@ -153,6 +153,9 @@
       "path": "packages/secrets-manager"
     },
     {
+      "path": "packages/signature-v4"
+    },
+    {
       "path": "packages/ssm"
     }
   ]
