Add new clients for AWS Timestream services (#115)
Introduced `timestream-write`, `timestream-query`, and `timestream-influxdb` clients with full workspace integration.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -44,6 +44,9 @@ packages:
   - packages/client-ssm
   - packages/client-sts
   - packages/client-textract
+  - packages/client-timestream-influxdb
+  - packages/client-timestream-query
+  - packages/client-timestream-write
   - packages/commons
   - packages/lambda
   - packages/lib-dynamodb
