--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "ts-node": "^10.9.1",
     "tsx": "^4.16.5",
     "typescript": "^5.4.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "vitest-mock-extended": "^2.0.2"
   },
   "dependencies": {
     "@effect/cli": "0.48.25",
