Add firehose client

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,6 +19,7 @@ packages:
   - packages/client-ecs
   - packages/client-elasticache
   - packages/client-eventbridge
+  - packages/client-firehose
   - packages/client-iam
   - packages/client-iot
   - packages/client-iot-data-plane
