--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -64,6 +64,9 @@
       "path": "packages/client-eventbridge/tsconfig.esm.json"
     },
     {
+      "path": "packages/client-firehose/tsconfig.esm.json"
+    },
+    {
       "path": "packages/client-iam/tsconfig.esm.json"
     },
     {
