--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,9 @@
       "path": "packages/client-eventbridge"
     },
     {
+      "path": "packages/client-firehose"
+    },
+    {
       "path": "packages/client-iam"
     },
     {
