feat: poc implement S3FileSystem

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -53,5 +53,6 @@ packages:
   - packages/lambda
   - packages/lib-dynamodb
   - packages/powertools-logger
+  - packages/s3
   - packages/secrets-manager
   - packages/ssm
